# heap_tracker

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build_test_clang.sh  cmake.sh  cmake_interposition.sh  cmake_tcmalloc.sh  make_style.sh
src/: CMakeLists.txt  heap_observer_callstack_stats.cc  heap_observer_callstack_stats.h  heap_observer_summary_stats.cc  heap_observer_summary_stats.h  heap_tracker.cc  heap_tracker.h  heap_tracker_dispatcher.cc  heap_tracker_dispatcher.h  heap_tracker_interceptor.h  heap_tracker_interceptor_interposition.cc  heap_tracker_interceptor_interposition.h  heap_tracker_interceptor_tcmalloc.cc  heap_tracker_interceptor_tcmalloc.h  heap_tracker_observer_interface.h  heap_tracker_observer_summary.cc  heap_tracker_observer_summary.h  heap_tracker_observer_summary_automatic_setup.cc  heap_tracker_observer_timeseries_file.cc  heap_tracker_observer_timeseries_file.h  heap_tracker_observer_timeseries_file_automatic_setup.cc  heap_tracker_observer_timeseries_file_decoder_tool.cc  heap_tracker_observer_timeseries_file_graph_input_tool.cc  heap_tracker_types.cc  heap_tracker_types.h  heap_tracker_utils.cc  heap_tracker_utils.h  heap_watch_tcmalloc.cc  heap_watch_tcmalloc.h  plot_timeseries_outstanding_bytes.py
test/: CMakeLists.txt  heap_tracker_observer_summary.output.expected.txt  heap_tracker_observer_timeseries_file.output.decoded.expected.txt  heap_tracker_test.cc  heap_tracker_test1.cc  heap_tracker_test2.cc  heap_tracker_test3.cc  heap_tracker_test_common.cc  heap_tracker_test_common.h  run_all_tests_for_all_interceptions.sh  run_all_tests_for_specific_interception.sh  test_interposition_summary.sh  test_interposition_timeseries_file.sh  test_tcmalloc_summary.sh  test_tcmalloc_timeseries_file.sh
